[tool.poetry]
name = "openopc2"
version = "0.1.3"
description = "OPC library with a Windows gateway enabling non-Windows clients to access OPC-DA calls."
license = "GPL-2.0-or-later"
readme = "README.md"
authors = [
    "Lorenz Padberg <lorenz.padberg@iterativ.ch>",
    "Elia Bieri <elia.bieri@iterativ.ch>",
]
repository = "https://github.com/iterativ/openopc2"
keywords = ["opc", "openopc", "opc-da", "opc classic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Intended Audience :: Manufacturing",
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
pyro5 = "^5.14"
WMI = { version = "^1.5.1", markers = "sys_platform == 'win32'" }
pywin32 = { version = "304", markers = "sys_platform == 'win32'" }
typer = { extras = ["all"], version = "^0.6.1" }
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
